--- a/src/app/github/github.component.css
+++ b/src/app/github/github.component.css
@@ -4,20 +4,13 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #777474;
+  background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #777474;
-}
-
-div {
-  margin-bottom: 20px;
-  margin-right: 10x;
-  padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 /* Überschrift */
@@ -52,10 +45,10 @@ button {
   margin-right: 10px;
   display: inline-block;
   padding: 10px 20px;
-  background-color: #fafafa;
+  background-color: #ee9c4f;
   color: #000000;
   border-radius: 4px;
-  border: black;
+  border: none;
   cursor: pointer;
   font-size: 16px;
 }
@@ -75,30 +68,9 @@ textarea {
   font-size: 16px;
 }
 
-.example-container {
-  width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.example-sidenav {
-  padding: 20px;
-}
-
-
 /* Responsive Anpassungen */
 @media (max-width: 600px) {
   .container {
     padding: 10px;
   }
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
