--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 <!-- app.component.html -->
 
-<mat-toolbar class="title-toolbar">
-    <mat-toolbar-row>
-
-      <span class="title-center">GeeksforGeeks</span> 
-    </mat-toolbar-row>
-  </mat-toolbar>
-    
-  <router-outlet></router-outlet>
+<h1>dasdas</h1>
     
 
 
