--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <mat-toolbar class="title-toolbar">
     <mat-toolbar-row>
 
-      <span class="title-center">Berkays Website</span> 
+      <span class="title-center">Berkays coole Website</span> 
     </mat-toolbar-row>
   </mat-toolbar>
     
