--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,6 +52,12 @@ footer {
   margin: 0 auto;
   color: white;
 }
+
+.title-left {
+  margin: 0 0 0 10px;
+  padding-top: 20px;
+  color: white;
+}
   
 .title-toolbar {
   background: rgb(0, 145, 133);
