--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,52 +8,49 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar>
-      <mat-drawer-container style="text-align: center;">
+      <mat-toolbar-row>
         <button
-        style="text-align: center;"
-          type="button"
           aria-label="Toggle sidenav"
           mat-icon-button
-          (click)="drawer.toggle()"
+          (click)="drawerToggle()"
         >
           <mat-icon aria-label="Side nav toggle icon">close</mat-icon>
           <!-- menu or close -->
         </button>
-      </mat-drawer-container>
+      </mat-toolbar-row>
     </mat-toolbar>
 
     <mat-nav-list>
-
-
       <mat-list-item [routerLink]="'github'">
         <mat-label>
-          <mat-icon mat-list-icon>person</mat-icon>
           Github
+          <mat-icon mat-list-icon>person</mat-icon>
         </mat-label>
       </mat-list-item>
 
       <mat-list-item [routerLink]="'calculator'">
         <mat-label>
-          <mat-icon mat-list-icon>calculate</mat-icon>
           Calculator
+          <mat-icon mat-list-icon>calculate</mat-icon>
         </mat-label>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
+
   <!-- Content - rendered Content for the current router path into the <router-outlet>, e.g. /dashboard or /info-->
   <mat-sidenav-content>
     <mat-toolbar>
-      <div class="left">
+      <mat-toolbar-row>
         <button
           type="button"
           aria-label="Toggle sidenav"
           mat-icon-button
-          (click)="drawer.toggle()"
+          (click)="drawerToggle()"
         >
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           <!-- menu or close -->
         </button>
-      </div>
+      </mat-toolbar-row>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
